# product-microservice-api

./: Dockerfile  docker-compose.yml  pyproject.toml  readme.md
app/: main.py
app/db/: connection.py  models.py
app/migrations/: env.py
app/migrations/versions/: 0e7e8e1df8d8_add_user_table.py  1def2b158ae8_add_product_table.py  9070d6ef273c_add_category_table.py  91e76908fd46_add_products_table.py  9c1ead8c032e_ajuste_no_db.py
app/routes/: category_routes.py  deps.py  product_routes.py  user_routes.py
app/schemas/: base.py  category.py  product.py  user.py
app/test/: conftest.py
app/test/routes/: test_category_routes.py  test_product_routes.py  test_user_routes.py
app/test/schemas/: test_category_schema.py  test_product_schema.py  test_user_schema.py
app/test/use_cases/: test_category_use_cases.py  test_product_use_cases.py  test_user_use_cases.py
app/use_cases/: category.py  product.py  user.py
